@@ -1364,3 +1364,7 @@
 2013-05-23 Ryuan Choi (ryuan)
 
         * Fix elm_colorselector does not emit "changed" when clicked color palatte.
+
+2013-05-27 Tae-Hwan Kim (bluezery)
+
+        * Add support elm_object_item_signal_emit() for elm_list.
